--- a/app/styles/components/_highlight.scss
+++ b/app/styles/components/_highlight.scss
@@ -5,7 +5,6 @@
   font-family: $monospace-font-family;
   font-size: 0.8em;
   line-height: 1.5em;
-  margin: $small-spacing 0 $large-spacing;
   overflow: hidden;
   position: relative;
 
